--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,27 @@ body {
 /* Navbar */
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 16px 32px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0px;
   border-bottom: 1px solid #666;
   background-color: transparent;
+  width: 70%;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px 0px;
+  width: 100%;
+
 }
 
 .navbar-logo {
@@ -30,6 +46,7 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-inline: 20px;
 }
 
 .navbar-link {
@@ -50,10 +67,12 @@ body {
 .login-button {
   background-color: #ffcc00;
   color: black;
-  padding: 8px 16px;
+  padding: 10px 16px;
   border: none;
-  border-radius: 50px;
+  border-radius: 10px;
   font-weight: bold;
+  cursor: pointer;
+  text-align: center;
   cursor: pointer;
 }
 
