--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,45 @@ body {
 }
 
 
+/* Navbar Media Queries */
+
+
+/* Tablets */
+
+@media (max-width: 1024px) {
+    .navbar-menu {
+        display: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+}
+
+
+/* Mobile */
+
+@media (max-width: 768px) {
+    .navbar-menu {
+        display: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+}
+
+
+/* Small Mobile */
+
+@media (max-width: 480px) {
+    .navbar-menu {
+        display: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+}
+
+
 /* Main Content */
 
 .main-content {
